--- a/src/main/resources/Home.fxml
+++ b/src/main/resources/Home.fxml
@@ -16,12 +16,12 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomeController">
    <children>
-      <JFXDrawer fx:id="filtersDrawer" defaultDrawerSize="200.0" direction="TOP" layoutY="50.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="1000.0">
+      <SplitPane fx:id="mainSplitPane" layoutY="55.0" prefHeight="545.0" prefWidth="1000.0" />
+      <JFXDrawer fx:id="settingsDrawer" defaultDrawerSize="400.0" direction="TOP" layoutY="50.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1000.0" visible="false">
          <effect>
             <DropShadow height="2.5" radius="1.375" spread="0.25" width="5.0" />
          </effect>
       </JFXDrawer>
-      <SplitPane fx:id="mainSplitPane" layoutY="55.0" prefHeight="545.0" prefWidth="1000.0" />
       <GridPane fx:id="topBarGridPane" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="1000.0" scaleShape="false">
          <columnConstraints>
             <ColumnConstraints fx:id="gridPaneLeft" halignment="LEFT" hgrow="ALWAYS" maxWidth="307.33331298828125" minWidth="10.0" prefWidth="304.6666564941406" />
@@ -32,7 +32,7 @@
             <RowConstraints minHeight="10.0" valignment="CENTER" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <JFXButton fx:id="filtersButton" alignment="CENTER_RIGHT" ripplerFill="BLACK" text="Settings" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+            <JFXButton fx:id="settingsButton" alignment="CENTER_RIGHT" ripplerFill="BLACK" text="Settings" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                <graphic>
                   <FontAwesomeIconView fx:id="gearIcon" fill="#909090" glyphName="GEAR" size="14" />
                </graphic>
