--- a/src/main/resources/bearish-dark.css
+++ b/src/main/resources/bearish-dark.css
@@ -22,6 +22,11 @@
     -fx-background-color: #2f3640;
 }
 
+.jfx-toggle-button{
+    -jfx-toggle-color: #c0392b;
+    -jfx-toggle-line-color: #e74c3c;
+}
+
 .list-view {
     -fx-background-color: #2f3640;
 }
