--- a/src/main/resources/bearish-light.css
+++ b/src/main/resources/bearish-light.css
@@ -22,6 +22,11 @@
     -fx-background-color: #D7D8DC;
 }
 
+.jfx-toggle-button{
+    -jfx-toggle-color: #c0392b;
+    -jfx-toggle-line-color: #e74c3c;
+}
+
 .list-view {
     -fx-background-color: #D7D8DC;
 }
@@ -41,7 +46,7 @@
 
 
 .jfx-hamburger StackPane {
-    -fx-background-color: #218c74;
+    -fx-background-color: #c0392b;
 }
 
 
@@ -50,7 +55,7 @@
 }
 
 .jfx-rippler {
-    -jfx-rippler-fill: #2ecc71;
+    -jfx-rippler-fill: #c0392b;
 }
 
 .jfx-progress-bar > .track, .jfx-progress-bar > .bar {
@@ -71,5 +76,5 @@
 }
 
 .jfx-button {
-    -fx-text-fill: #218c74;
+    -fx-text-fill: #c0392b
 }
