--- a/src/main/resources/bullish-light.css
+++ b/src/main/resources/bullish-light.css
@@ -22,6 +22,18 @@
     -fx-background-color: #D7D8DC;
 }
 
+#stocksInfoPane {
+    -fx-background-color: #dcdde1;
+}
+
+#scrollPaneForStockPane {
+    -fx-background-color: #dcdde1;
+}
+
+.jfx-drawer-overlay-pane {
+    -fx-background-color: #218c74;
+}
+
 .list-view {
     -fx-background-color: #D7D8DC;
 }
