--- a/src/main/resources/bearish-light.css
+++ b/src/main/resources/bearish-light.css
@@ -30,6 +30,10 @@
     -fx-background-color: #dcdde1;
 }
 
+#spacerPane{
+    -fx-background-color: #D7D8DC;
+}
+
 .jfx-drawer-overlay-pane {
     -fx-background-color: #c0392b;
 }
