--- a/src/main/resources/Settings_Drawer.fxml
+++ b/src/main/resources/Settings_Drawer.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane fx:id="settingsPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SettingsDrawerController">
    <children>
       <Label layoutX="57.0" layoutY="49.0" text="Themes:" textFill="#718093">
@@ -26,6 +25,6 @@
          </cursor>
       </Pane>
       <JFXToggleButton fx:id="lightToggle" layoutX="67.0" layoutY="173.0" onAction="#selectLightTheme" prefHeight="50.0" prefWidth="100.0" size="8.0" text="Light" textFill="#718093" />
-      <JFXToggleButton fx:id="darkToggle" layoutX="177.0" layoutY="173.0" onAction="#selectDarkTheme" prefHeight="50.0" prefWidth="100.0" size="8.0" text="Dark" textFill="#718093" />
+      <JFXToggleButton fx:id="darkToggle" layoutX="177.0" layoutY="173.0" onAction="#selectDarkTheme" prefHeight="50.0" prefWidth="100.0" selected="true" size="8.0" text="Dark" textFill="#718093" />
    </children>
 </AnchorPane>
