--- a/src/main/resources/Side_Drawer.fxml
+++ b/src/main/resources/Side_Drawer.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXListView?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox fx:id="dashboardDrawerVBox" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SideDrawerController">
    <children>
+      <Pane fx:id="spacerPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="200.0" />
       <JFXListView fx:id="listView" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="599.0" prefWidth="195.0" showTooltip="true" VBox.vgrow="ALWAYS" />
    </children>
 </VBox>
