--- a/src/main/resources/bearish-dark.css
+++ b/src/main/resources/bearish-dark.css
@@ -30,6 +30,10 @@
     -fx-background-color: #353b48;
 }
 
+#spacerPane{
+    -fx-background-color: #2f3640;
+}
+
 .jfx-drawer-overlay-pane {
     -fx-background-color: #c0392b;
 }
