--- a/src/main/resources/bullish-dark.css
+++ b/src/main/resources/bullish-dark.css
@@ -94,3 +94,11 @@
 .jfx-button {
     -fx-text-fill: #218c74;
 }
+
+body {
+    background: #353b48;
+}
+
+body > p {
+    color: rgba(255,255,255,0.75);
+}
