--- a/src/main/resources/graph-bullish.css
+++ b/src/main/resources/graph-bullish.css
@@ -48,7 +48,7 @@
     -fx-border-color: transparent black transparent transparent;
 }
 .axis Text{
-    -fx-fill: rgba(0,0,0,0.8);
+    -fx-fill: white;
 }
 .tick-mark {
     -fx-font-size: 10px;
@@ -62,16 +62,16 @@
 .chart-legend {
     -fx-background-color:  transparent;
     -fx-padding: 20px;
-    -fx-fill: #4682b4;
+    -fx-fill: white;
 }
 
 .chart-legend-item-symbol{
     -fx-background-radius: 0;
-    -fx-fill: #4682b4;
+    -fx-fill: white;
 }
 
 .chart-legend-item{
-    -fx-text-fill: #4682b4;
+    -fx-text-fill: white;
 }
 
 .chart-plot-background {
